# box2d-lite

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: main.yml
samples/: CMakeLists.txt  imgui_impl_glfw.cpp  imgui_impl_opengl2.cpp  main.cpp
samples-noGUI/: CMakeLists.txt  samples-noGUI.cpp
tests/: CMakeLists.txt  body-test.cpp  collide-test.cpp  world-test.cpp
